--- a/pom.xml
+++ b/pom.xml
@@ -82,9 +82,9 @@
         </profile>
         <profile>
             <id>nexus</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
+<!--            <activation>-->
+<!--                <activeByDefault>true</activeByDefault>-->
+<!--            </activation>-->
             <distributionManagement>
                 <snapshotRepository>
                     <id>nexus-snapshot</id>
