--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.example</groupId>
     <artifactId>nexus</artifactId>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.1</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -42,7 +42,7 @@
     <scm>
         <developerConnection>scm:git:https://github.com/remouter/nexus.git</developerConnection>
         <url>https://github.com/remouter/nexus</url>
-      <tag>HEAD</tag>
+      <tag>nexus-1.1</tag>
   </scm>
 
     <build>
